# Weborama

./: pyproject.toml  task1.py  task2.py
test_books/: book1.epub  book1.fb2  book2.epub  book2.fb2
