[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Alexander Platonov <sasa20sasha19910@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
ebooklib = "^0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
